--- a/TimeTable/en.lproj/Localizable.strings
+++ b/TimeTable/en.lproj/Localizable.strings
@@ -44,6 +44,7 @@
 "period" = "";//also used in Detail View
 
 //EasyTimeSetting
+"EasySettingVCTitle" = "Class Hours";
 "NoLunchbreak" = "No Break";
 "min" = " minutes";
 "ClassHours" = "Class Hours";
